# borneo

./: .gitattributes  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  README.zh.md
.github/: CONTRIBUTING.md  FUNDING.yml
.github/workflows/: flutter-ci.yml  fw-ci.yml  fw-release.yml
borneopy/: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  setup.py
borneopy/borneo/: __init__.py  borneo_device.py  cli.py  coap_ota.py  device.py  esptouch.py  lyfi.py
borneopy/examples/: esptouch.py  hello_buce.py  hello_lyfi.py  lyfi_ota_example.py
client/: .flutter-devtools.yaml  .gitignore  AGENTS.md  README.md  analysis_options.dart.yaml  analysis_options.yaml  melos.yaml  pubspec.yaml
client/android/: .gitignore  build.gradle  build.gradle.kts  (+2 more)
fw/: .clang-format  .clangd  .gitignore  AGENTS.md
fw/components/borneo-core/: CMakeLists.txt  Kconfig  idf_component.yml
fw/components/borneo-core/drivers/: adc.c  indicator.c  pwm.c  sensor_voltage.c
fw/components/borneo-core/drivers/indicator/: indicator_gpio.c
fw/components/borneo-core/include/borneo/: coap.h  common.h  cron.h  mdns.h  ntc.h  nvs.h  ota.h  power-meas.h  power.h  product.h  rtc.h  sensors.h  sntp.h  system.h  timer.h  transport.h  try.h  wifi.h
fw/components/borneo-core/include/borneo/algo/: astronomy.h  filters.h
fw/components/borneo-core/include/borneo/devices/: adc.h  indicator.h  pwm.h  sensor.h
fw/components/borneo-core/include/borneo/rpc/: common.h
fw/components/borneo-core/include/borneo/utils/: bit-utils.h  time.h  version.h
fw/components/borneo-core/src/: coap.lf  cron.c  init.c  mdns.c  ntc.c  nvs.c  power-meas.c  power.c  rtc.c  sensors.c  sntp.c  system.c  timer.c
fw/components/borneo-core/src/algo/: astronomy.c  filters.c
fw/components/borneo-core/src/coap/: coap.c
fw/components/borneo-core/src/coap/resources/: coap-ota-resources.c  common-resources.c  factory-resources.c  power-resources.c  rtc-resources.c  settings-resources.c
fw/components/borneo-core/src/rpc/: common.c  factory.c  power.c  rtc.c
fw/components/borneo-core/src/utils/: time.c  version.c
fw/components/borneo-core/src/wifi/: blufi-security.c  blufi-security.h  blufi.c  blufi.h  np.c  np.h  prov-rpc-protocol.md  sc.c  sc.h  wifi.c
fw/components/drvfx/: CMakeLists.txt  Kconfig  README.md  idf_component.yml  kernel-linker.lf
fw/components/drvfx/drivers/rtc/: ds1302.c  idf.c  pcf8563.c
fw/components/drvfx/include/drvfx/: drvfx.h
fw/components/drvfx/include/drvfx/drivers/: rtc.h
fw/components/drvfx/include/drvfx/kernel/: common.h  device.h  error.h  init.h  kernel.h  toolchain.h
fw/components/drvfx/kernel/: device.c  init.c  kernel.c
fw/doser/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
fw/doser/main/src/: init.c  main.c  pump.c  pump.h  scheduler.c  scheduler.h
fw/lyfi/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
fw/lyfi/main/src/: algo.c  algo.h  button.c  button.h  coap-notify.c  coap-paths.h  fan.c  fan.h  init.c  led-correction-lut.c  led-settings.c  led.acclimation.c  led.c  led.correction-lut.c  led.h  led.scheduler.c  led.settings.c  led.solar.c  lyfi-events.h  main.c  moon.c  moon.h  ntc.c  ntc.h  power-meas.c  power-meas.h  protect.c  protect.h  rmtpwm.c  rmtpwm.h  solar.c  solar.h  sun.c  sun.h  thermal.c  thermal.h
fw/lyfi/main/src/coap-resources/: acclimation.c  cbor-common.c  cbor-common.h  cbor.c  common.c  common.h  fan.c  lyfi-core-coap.c  lyfi-core.c  lyfi-fan-coap.c  lyfi-thermal-coap.c  moon.c  power.c  protect.c  sun.c  thermal.c
fw/lyfi/main/src/drivers/: apwm.h  fpwm.h  fpwm_rmtpwm.c  sensor_led_current.c  sensor_led_power.c  sensor_temp.c  vreg.h  vreg_dac.c  vreg_mcpwm.c  vreg_rmtpwm.c
fw/lyfi/main/src/led/: acclimation.c  correction-lut.c  disco.c  fade.c  led.c  led.h  led_cloud.c  led_moon.c  scheduler.c  settings.c  solar.c  temporary.c
fw/lyfi/main/src/rpc/: acclimation.c  cbor-common.c  fan.c  lyfi-core.c  moon.c  power.c  power.h  protect.c  protect.h  rpc.h  sun.c  thermal.c
hw/: AGENTS.md
tools/: update_translations.py
(+756 files in other folders)
